[package]
name = "aspect-weave"
version = "0.1.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["aspect", "macro"]
repository = "https://github.com/magnet/aspect-rs"
description = """
An Aspect Toolkit for Rust
"""
categories = ["rust-patterns", "data-structures", "config", "algorithms"]
edition = "2018"

[dependencies]
syn = {version= "0.15.26", features = ["full"] }
quote = "0.6.11"
proc-macro2 = "0.4.26"
indexmap = "1.0.2"
synattra = "0.1.0"
