[package]
name = "aspect-weave"
version = "0.3.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["aspect", "macro"]
repository = "https://github.com/magnet/aspect-rs"
description = """
An Aspect Toolkit for Rust
"""
categories = ["rust-patterns", "data-structures", "config", "algorithms"]
edition = "2018"

[dependencies]
syn = {version= "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
indexmap = "2.1"
synattra = {  path = "../../synattra", version = "0.3.0" }
